# SBot

./: .gitattributes  CMakeLists.txt  LICENSE  SBotConfig.cmake.in  readme.md
cmake/: base64.cmake  jsoncpp.cmake
include/: SBot_Core.h
include/SBot_Private/: SBot_Def.h  SBot_Tools.h
include/SBot_Ws_Impl/: SBot_Ws_Impl.h
src/: SBot_Core.cpp  SBot_Def.cpp  SBot_Help.cpp  SBot_Tools.cpp  SBot_Ws_Impl.cpp
test/: testbot.c  testuuid.cpp
